src/styles/nav.module.css
.container{
    display: flex;
    align-items: center;
    padding-top: 1rem;
    padding: .25rem;
    background-color: white;
    position: fixed;
    top: 0;
    height: 60px;
    width: 100vw;
    max-width: 100vw;
    z-index: 100;
    border-bottom: 1px solid rgba(184, 184, 184, 0.445);
}
.navButton{
    margin-right: 2.5%;
    margin-left: auto;
    font-size: 2rem;
    font-weight: 300;
    color: #666;
    transform: rotate(90deg);
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    justify-content: center;
    z-index: 1;
}

.navButton:hover, .logo:hover{
    cursor: pointer;
}
.blurScreen{
    height: 100vh;
    width: 50%;
    position: absolute;
    left: 0;
    top: 0;
    background-color: rgba(145, 145, 145, 0.534);
}
.navToggler{
    position: absolute;
    right: 0;
    background-color: #ebe9c3;
    height: 100vh;
    width: 50%;
    top: 0;
    margin-top: -1rem;
    padding-top: 20%;
    border-left: 3px solid #55cea2;
    display: flex;
    flex-direction: column;
}

.navList{
    list-style: none;
    line-height: 5rem;
}
.navItem{
    border-bottom: 1px solid silver;
    padding-left: 1rem;
    width: 100%;
    height: 10%;
    display: flex;
    align-items: center;
}
.navItem:first-child{
    border-top: 1px solid silver;
}

.navLink{
    font-size: 1.25rem;
    text-decoration: none;
    color: gray;
    font-weight: 400;
}

.navInfo{
    display: flex;
    flex-direction: column;
    margin-top: auto;
    margin-bottom: 50%;
    margin-left: .3rem;
}

.storeName{
    font-weight: 400;
    font-size: 1.4rem;
}
.storeNumber{
    text-decoration: none;
    color: orangered;
    font-weight: 400;
    font-size: 1.2rem;
}
.storeNumber:hover{
    cursor: pointer;
}
.storeAddress{
    font-weight: 300;
    font-size: 1.2rem;
}

